按 FINAL_CHECK0.md 对照 Python 版把列出的缺项和弱实现逐项补齐，包含 guardrail、工具注解/schema 提取、MCP concrete clients、foundation.store、runner.drunner、controller.legacy、singleagent.legacy、MarkdownOutputParser、InferenceAffinityModel/client、VectorMigrator、RestfulApi 的 SSL/proxy，以及 LoggerProtocol 的 handler/filter/logger 能力